# django_rss_reader

./: .dockerignore  .env.docker.app.example  .env.example  .gitignore  Dockerfile  LICENSE  README.md  common.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
celery_beat/: Dockerfile  pyproject.toml  run.py
conf/: nginx.conf
nginx/: nginx.conf
src/: manage.py
src/accounts/: forms.py  urls.py  views.py
src/accounts/static/accounts/css/: login_styles.css
src/accounts/templates/accounts/: accounts_base.html  change_password.html  change_profile.html  delete_account_confirm.html  log_in.html  profile.html  sign_up.html
src/django_rss_reader/: asgi.py  celery.py  settings.py  urls.py  version.py  wsgi.py
src/rss_reader/: _date.py  _entry_api.py  _feed_api.py  admin.py  apps.py  constants.py  exceptions.py  forms.py  models.py  mutex.py  opml_parser.py  tasks.py  tests.py  url_converters.py  urls.py  views.py
src/rss_reader/api/: _refresh_intervals.py  dtos.py  entry_api.py  favicons_api.py  feed_api.py  network_io.py  render_api.py  rss_api.py  rss_parser.py
src/rss_reader/helpers/: date_helpers.py  file_paths.py  html_cleaner.py  urls.py
src/rss_reader/migrations/: 0001_initial.py  0001_squashed_0009_fill_sort_order.py  0002_alter_entry_published.py  0002_feed_feed_type.py  0002_requesthistory.py  0002_userfeed_stale.py  0003_alter_userfeed_stale.py  0003_feed_image_url.py  0003_requesthistory_status.py  0004_feed_image.py  0005_feed_last_exception_feed_last_response_body_and_more.py  0006_feed_disabled_reason_feed_update_after_and_more.py  0007_auto_20251114_2109.py  0008_userfeed_sort_order.py  0009_fill_sort_order.py
src/rss_reader/renderers/: feeds_to_opml.py  render_api.py  render_html.py
src/rss_reader/repos/: _refresh_intervals.py  db_repo.py  feed_repo.py  network_repo.py  request_history.py
src/rss_reader/rss/: dtos.py  helpers.py  rss_api.py  rss_parser.py
src/rss_reader/tasks/: __init__.py  favicons_api.py  tasks.py
src/rss_reader/templates/rss_reader/: add_feed_form.html  add_new_feed_modal.html  entries.html  entries_header.html  entries_sidebar.html  entry.html  entry_content.html  entry_content_header.html  error_message.html  feed.html  feeds.html  feeds_header.html  feeds_sidebar.html  index.html  info_message.html  oob-feed.html  oob_entries.html  oob_entries_header.html  oob_entry_content.html  oob_entry_content_header.html  oob_feed.html  oob_feeds.html  search_entries_form.html  settings.html
src/rss_reader/use_cases/: entry.py  main.py
src/rss_reader/use_cases/rss/: _refresh_intervals.py  helpers.py  rss_api.py  rss_parser.py
src/rss_reader/views/: entry_views.py  feed_views.py  main_view.py
src/rss_reader/websockets/: consumers.py  routing.py
src/static/css/: entries_styles.css  entry_content_styles.css  feeds_styles.css  htmx_styles.css  index_styles.css  main_tags_styles.css  styles.css
src/static/js/: Sortable.min.js  main.js
src/templates/: base.html
src/vendoring/fastfeedparser/: main.py
src/vendoring/html_sanitizer/: README.txt  html.py  sanitizer.py
tests/data_files/feeds/: test_feed_https.xml  test_feed_refresh_new_data.xml
tests/mocks/: network_repo_mock.py
tests/test_rss_reader/: conftest.py  helpers.py  test_import_rss.py  test_refresh.py
