[project]
name = "django-rss-reader"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "beautifulsoup4>=4.14.2",
    "brotli>=1.2.0",
    "celery>=5.5.3",
    "celery-types==0.23.0",
    "dateparser>=1.2.2",
    "django>=6.0rc1",
    "django-celery-results>=2.6.0",
    "django-debug-toolbar>=6.1.0",
    "django-htmx>=1.26.0",
    "docutils>=0.22.3",
    "granian>=2.6.0",
    "lxml>=6.0.2",
    "psycopg2-binary>=2.9.11",
    "pyopml>=1.0.0",
    "python-dateutil>=2.9.0.post0",
    "redis[hiredis]>=7.0.1",
    "sgmllib3k>=1.0.0",
]
[dependency-groups]
dev = [
    "django-stubs>=5.2.7",
    {include-group = "test"},
]
test = [
    "coverage>=7.11.3",
]
