[project]
name = "django-rss-reader"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "beautifulsoup4>=4.14.3",
    "brotli>=1.2.0",
    "celery[redis]>=5.3.1",
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "dateparser>=1.2.2",
    "django>=6.0",
    "django-celery-results>=2.6.0",
    "django-debug-toolbar>=6.1.0",
    "django-htmx>=1.27.0",
    "docutils>=0.22.3",
    "granian>=2.6.0",
    "lxml>=6.0.2",
    "psycopg[binary]>=3.3.1",
    "pyopml>=1.0.0",
    "python-dateutil>=2.9.0.post0",
    "redis[hiredis]>=7.1.0",
    "sgmllib3k>=1.0.0",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.8",
    "celery-types==0.23.0",
    "types-lxml>=2025.11.25",
    {include-group = "test"},
]
test = [
    "coverage>=7.11.3",
    "factory-boy>=3.3.3",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "pytest-xdist>=3.8.0",
]

[tool.ty.environment]
root = ["src"]

[tool.ty.src]
exclude = [
    "src/vendoring/**",
]

[tool.pytest]
minversion = "9.0"
DJANGO_SETTINGS_MODULE = "django_rss_reader.settings"
strict = true
addopts = [
    "-ra",
    "--import-mode=importlib",
]
testpaths = [
    "tests",
]
cache_dir = "/tmp/pytest-cache"
