[project]
name = "django-rss-reader"
version = "0.0.7"
description = "Django RSS Reader"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.5",
    "aiohttp-retry>=2.9.1",
    "beautifulsoup4>=4.14.3",
    "brotli>=1.2.0",
    "celery[redis]>=5.6.3",
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "daphne>=4.2.1",
    "dateparser>=1.4.0",
    "django>=6.0.4",
    "django-htmx>=1.27.0",
    "lxml>=6.0.3",
    "psycopg[binary]>=3.3.3",
    "pyopml>=1.0.0",
    "python-dateutil>=2.9.0.post0",
    "redis[hiredis]>=6.4.0",
    "sgmllib3k>=1.0.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.2",
    "celery-types==0.23.0",
    "types-lxml>=2026.2.16",
    "memray>=1.19.3",
    "django-debug-toolbar>=6.3.0",
    "django-nplusone>=0.0.5",
    {include-group = "test"},
]
test = [
    "coverage>=7.13.5",
    "factory-boy>=3.3.3",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "pytest-xdist>=3.8.0",
]

[tool.ty.environment]
root = ["src"]

[tool.ty.src]
exclude = [
    "src/vendoring/**",
]

[tool.pytest]
minversion = "9.0"
DJANGO_SETTINGS_MODULE = "django_rss_reader.settings"
strict = true
addopts = [
    "-ra",
    "--import-mode=importlib",
]
testpaths = [
    "tests",
]
cache_dir = "/tmp/pytest-cache"
